@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Properly support pherkin match mode
+
 0.001105  2021-02-22 18:05:07-05:00 America/Toronto
 
     - Fix repository link
